--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -27,19 +27,20 @@
                     <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
 
 
-                    <a href="#" class="py-3 px-3 text-lg font-semibold bg-teal-500 text-white rounded-xl   hover:bg-teal-700">Sign up</a>
-                    <a href="#" class="py-3 px-3 text-lg font-semibold bg-gray-500 text-white rounded-xl   hover:bg-gray-700">Log in</a>
+                    <a href="{% url 'core:signup' %}" class="py-3 px-3 text-lg font-semibold bg-teal-500 text-white rounded-xl   hover:bg-teal-700">Sign up</a>
+                    <a href="{% url 'core:login' %}" class="py-3 px-3 text-lg font-semibold bg-gray-500 text-white rounded-xl   hover:bg-gray-700">Log in</a>
                  </div>
                 </nav>
          </div>
       
         <div class="px-6 py-6">
-           {%block content%}
+           {% block content %}
            {% endblock %}
         </div>
+
         <script src="" async defer></script>
 
-        <footer class="py-6 px-6 flex justify-between bg-gray-800">
+    <footer class="py-6 px-6 flex justify-between bg-gray-800">
         <div class="w-2/3 pr-10">
             <h3 class="mb-5 font-semibold text-gray-400">About</h3>
             <p class="text-lg text-gray-500">lias ipsam necessitatibus rerum eum praesentium blanditiis eos.</p>
@@ -51,7 +52,7 @@
                 <li> <a href="#" class="text-lg text-teal-500 hover:text-teal-700">
                     About
                 </a></li>
-                <li> <a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-teal-700">
+                <li> <a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">
                     Contact
                 </a></li>
                 <li> <a href="#" class="text-lg text-teal-500 hover:text-teal-700">
@@ -64,5 +65,5 @@
 
         </div>
     </footer>
-    </body>
+</body>
 </html>
