--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -26,10 +26,15 @@
                     <a href="#" class="text-lg font-semibold hover:text-gray-500">New item</a>
                     <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
 
+                    {% if request.user.is_authenticated %}
+                    <a href="#" class="text-lg font-semibold hover:text-gray-500">Inbox</a>
+                    <a href="#" class="text-lg font-semibold hover:text-gray-500">Dashboard</a>
 
+                    {% else %}
                     <a href="{% url 'core:signup' %}" class="py-3 px-3 text-lg font-semibold bg-teal-500 text-white rounded-xl   hover:bg-teal-700">Sign up</a>
                     <a href="{% url 'core:login' %}" class="py-3 px-3 text-lg font-semibold bg-gray-500 text-white rounded-xl   hover:bg-gray-700">Log in</a>
-                 </div>
+                    {% endif %}
+                </div>
                 </nav>
          </div>
       
