--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -23,10 +23,11 @@
               
                 <div class="space-x-6">
 
-                    <a href="#" class="text-lg font-semibold hover:text-gray-500">New item</a>
+                    <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500">New item</a>
                     <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
 
                     {% if request.user.is_authenticated %}
+                   
                     <a href="#" class="text-lg font-semibold hover:text-gray-500">Inbox</a>
                     <a href="#" class="text-lg font-semibold hover:text-gray-500">Dashboard</a>
 
