--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -29,7 +29,7 @@
                     {% if request.user.is_authenticated %}
                    
                     <a href="#" class="text-lg font-semibold hover:text-gray-500">Inbox</a>
-                    <a href="#" class="text-lg font-semibold hover:text-gray-500">Dashboard</a>
+                    <a href="{% url 'dashboard:index' %}" class="text-lg font-semibold hover:text-gray-500">Dashboard</a>
 
                     {% else %}
                     <a href="{% url 'core:signup' %}" class="py-3 px-3 text-lg font-semibold bg-teal-500 text-white rounded-xl   hover:bg-teal-700">Sign up</a>
