--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -17,14 +17,28 @@
       <strong>Discription</strong> <br />
       {{item.description}}
     </p>
-    {% endif %}
-
+    {% endif %} {% if request.user == item.created_by %}
+    <div class="mt-6 p-6 bg-white rounded-xl">
+      <p>This is your item!</p>
+      <a
+        href="#"
+        class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 rounded-xl text-white"
+        >Edit</a
+      >
+      <a
+        href="{% url 'item:delete' item.id%}"
+        class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 rounded-xl text-white"
+        >Delete</a
+      >
+    </div>
+    {% else%}
     <a
       href="#"
       class="inline-block mt-6 px-6 py-5 text-lg font-semiblold bg-teal-500 rounded-xl text-white hover:bg-teal-700"
     >
       Contact Seller</a
     >
+    {% endif %}
   </div>
 </div>
 
