--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -28,7 +28,7 @@
 
                     {% if request.user.is_authenticated %}
                    
-                    <a href="#" class="text-lg font-semibold hover:text-gray-500">Inbox</a>
+                    <a href="{% url 'conversation:inbox' %}" class="text-lg font-semibold hover:text-gray-500">Inbox</a>
                     <a href="{% url 'dashboard:index' %}" class="text-lg font-semibold hover:text-gray-500">Dashboard</a>
 
                     {% else %}
