--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -33,7 +33,7 @@
     </div>
     {% else%}
     <a
-      href="#"
+      href="{% url 'conversation:new' item.id%}"
       class="inline-block mt-6 px-6 py-5 text-lg font-semiblold bg-teal-500 rounded-xl text-white hover:bg-teal-700"
     >
       Contact Seller</a
