--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -30,6 +30,11 @@
                    
                     <a href="{% url 'conversation:inbox' %}" class="text-lg font-semibold hover:text-gray-500">Inbox</a>
                     <a href="{% url 'dashboard:index' %}" class="text-lg font-semibold hover:text-gray-500">Dashboard</a>
+                  
+                    <form method="post" action="{% url 'core:logout' %}" class=" inline-block py-3 px-3 text-lg font-semibold bg-red-500 text-white rounded-xl   hover:bg-red-700">
+                        {% csrf_token %}
+                        <button type="submit">Logout</button>
+                    </form>
 
                     {% else %}
                     <a href="{% url 'core:signup' %}" class="py-3 px-3 text-lg font-semibold bg-teal-500 text-white rounded-xl   hover:bg-teal-700">Sign up</a>
